--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <input type="text" id="search">
-    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="src/index.js"></script>
   </body>
 </html>
