--- a/index.html
+++ b/index.html
@@ -3,10 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="./styles/style,.css">
     <title>Document</title>
   </head>
   <body>
-    <input type="text" id="search">
-    <script type="module" src="scripts/index.js"></script>
+    <header class="container-fluid" id="header">
+      <div class="row h-100">
+        <div class="col-sm-12 col-xl-12 col-lg-11 col-md-12 my-5 mx-auto col-xxl-6">
+          <div class="hsstack">
+            <img src="./images/Les petits plats.svg" alt="">
+            <img src="images/Group 3.svg" alt="" class="">
+          </div>
+            <div class="d-flex justify-content-center align-items-center h-100">
+              <div class="row">
+                <div class="col-xl-8 col-xxl-12 col-lg-8 col-12 mx-auto">
+                  <h1 class="text-uppercase text-warning text-center">cherchez parmi plus de 1500 recettes du quotidien, simples et delicieuse</h1>
+                </div>
+                <div class="col-12 col-xl-10 mx-auto">
+                  <div class="form-group position-relative mt-4 mx-auto text-nowrap">
+                    <input type="text" class="form-control form-control-lg">
+                    
+                    <button class="btn btn-secondary position-absolute top-50 end-0 translate-middle rounded">
+                      <i class="fas fa-search"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+    </header>
+    <!-- <div class="btn-group" role="group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        Dropdown
+      </button>
+      <ul class="dropdown-menu">
+        <ul class="p-3">
+          <li class="list-group-item"><input type="text" class="form-control"></li>
+        </ul>
+        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+      </ul>
+    </div> -->
+
+    <script type="module" src="src/ui.js"></script>
   </body>
 </html>
