--- a/index.html
+++ b/index.html
@@ -39,18 +39,56 @@
         </div>
       </div>
     </header>
-    <!-- <div class="btn-group" role="group">
-      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        Dropdown
-      </button>
-      <ul class="dropdown-menu">
-        <ul class="p-3">
-          <li class="list-group-item"><input type="text" class="form-control"></li>
-        </ul>
-        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-      </ul>
-    </div> -->
+    <div class="container-md mt-3">
+      <div class="row">
+        <div class="col-12">
+          <div class="row">
+            <div class="col-12 col-sm-4 col-lg-2">
+              <div class="btn-group w-100" role="group">
+                <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span id="ingredient">Ingredients</span>
+                </button>
+                <ul class="dropdown-menu ingredient">
+                  <ul class="p-3">
+                    <li class="list-group-item"><input type="text" class="form-control"></li>
+                  </ul>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-12 col-sm-4 col-lg-2">
+              <div class="btn-group w-100" role="group">
+                <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span id="ustensil">Ustensiles</span>
+                </button>
+                <ul class="dropdown-menu ustensils">
+                  <ul class="p-3">
+                    <li class="list-group-item"><input type="text" class="form-control"></li>
+                  </ul>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-12 col-sm-4 col-lg-2">
+              <div class="btn-group w-100" role="group">
+                <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span id="appliance">Appareil</span>
+                </button>
+                <ul class="dropdown-menu appliances">
+                  <ul class="p-3">
+                    <li class="list-group-item"><input type="text" class="form-control"></li>
+                  </ul>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    
 
     <script type="module" src="src/ui.js"></script>
   </body>
