--- a/index.html
+++ b/index.html
@@ -89,71 +89,8 @@
         </div>
         
       </div>
-      <div class="row my-5 gy-3">
-        <div class="col-12 col-xxl-4 col-sm-6 col-md-6 col-lg-5 mx-auto">
-          <div class="card">
-            <img src="./images/Recette01.jpg" class="card-img-top rounded" alt="...">
-            <div class="card-body pe-5">
-              <h4 class="my-4">Limonade de Coco</h4>
-              <h5 class="card-title text-uppercase fs-6 text-secondary">recette</h5>
-              <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.</p>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title text-uppercase fs-6 text-secondary">Ingredients</h5>
-              <div class="row my-4">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-6">
-                      <div class="card-text">
-                        <p class="p-0 m-0">Lait de coco</p>
-                        <span class="text-secondary">400ml</span>
-                      </div>
-                    </div>
-                    <div class="col-6">
-                      <div class="card-text">
-                        <p class="p-0 m-0">Jus de citron</p>
-                        <span class="text-secondary">2</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row my-4">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-6">
-                      <div class="card-text">
-                        <p class="p-0 m-0">sucre</p>
-                        <span class="text-secondary">20g</span>
-                      </div>
-                    </div>
-                    <div class="col-6">
-                      <div class="card-text">
-                        <p class="p-0 m-0">Creme de Coco</p>
-                        <span class="text-secondary">4 cuillieres</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row my-4">
-                <div class="col-12">
-                  <div class="row">
-                    <div class="col-6">
-                      <div class="card-text">
-                        <p class="p-0 m-0">glacon</p>
-                        <span class="text-secondary">2</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-    </div>=
+      <div class="row my-2 gy-3" id="recipes"></div>
+    </div>
     <script type="module" src="src/ui.js"></script>
   </body>
 </html>
