--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-12 col-xl-10 mx-auto">
                   <div class="form-group position-relative mt-4 mx-auto text-nowrap">
-                    <input type="text" class="form-control form-control-lg">
+                    <input type="text" class="form-control form-control-lg" id="search">
                     
                     <button class="btn btn-secondary position-absolute top-50 end-0 translate-middle rounded">
                       <i class="fas fa-search"></i>
@@ -91,6 +91,7 @@
       </div>
       <div class="row my-2 gy-3" id="recipes"></div>
     </div>
+    <script type="module" src="src/index.js"></script>
     <script type="module" src="src/ui.js"></script>
   </body>
 </html>
