[searchSelect] add logic ui select labels

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                   </ul>
               </div>
             </div>
+            <div class="col-12 mt-4" id="label-select"></div>
           </div>
         </div>
         
