--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
       <div class="row my-2 gy-3" id="recipes"></div>
     </div>
-    <script type="module" src="src/ui.js"></script>
     <script type="module" src="src/index.js"></script>
+    <script src="src/ui.js"></script>
   </body>
 </html>
