[searchSelect] add all options select on all selects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="ingredient">Ingredients</span>
                   </button>
-                  <ul class="dropdown-menu ingredient">
+                  <ul class="dropdown-menu ingredients overflow-auto">
                     <ul class="p-3">
                       <li class="list-group-item"><input type="text" class="form-control"></li>
                     </ul>
@@ -62,7 +62,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="ustensil">Ustensiles</span>
                   </button>
-                  <ul class="dropdown-menu ustensils">
+                  <ul class="dropdown-menu ustensils overflow-scroll">
                     <ul class="p-3">
                       <li class="list-group-item"><input type="text" class="form-control"></li>
                     </ul>
@@ -76,7 +76,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="appliance">Appareil</span>
                   </button>
-                  <ul class="dropdown-menu appliances">
+                  <ul class="dropdown-menu appliances overflow-auto">
                     <ul class="p-3">
                       <li class="list-group-item"><input type="text" class="form-control"></li>
                     </ul>
