[searchSelect] add event listener on all options selects

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="ingredient">Ingredients</span>
                   </button>
-                  <ul class="dropdown-menu ingredients overflow-auto">
-                    <ul class="p-3">
-                      <li class="list-group-item"><input type="text" class="form-control"></li>
-                    </ul>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  </ul>
+                  <ul class="dropdown-menu ingredients w-100 overflow-auto"></ul>
                 </div>
               </div>
               <div class="col-12 col-sm-4 col-lg-2">
@@ -62,13 +56,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="ustensil">Ustensiles</span>
                   </button>
-                  <ul class="dropdown-menu ustensils overflow-scroll">
-                    <ul class="p-3">
-                      <li class="list-group-item"><input type="text" class="form-control"></li>
-                    </ul>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  </ul>
+                  <ul class="dropdown-menu ustensils w-100 overflow-auto"></ul>
                 </div>
               </div>
               <div class="col-12 col-sm-4 col-lg-2">
@@ -76,13 +64,7 @@
                   <button type="button" class="btn btn-light dropdown-toggle w-100" data-bs-toggle="dropdown" aria-expanded="false">
                     <span id="appliance">Appareil</span>
                   </button>
-                  <ul class="dropdown-menu appliances overflow-auto">
-                    <ul class="p-3">
-                      <li class="list-group-item"><input type="text" class="form-control"></li>
-                    </ul>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                    <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  </ul>
+                  <ul class="w-100 overflow-auto dropdown-menu appliances"></ul>
               </div>
             </div>
           </div>
