--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             </div>
           </div>
         </div>
-        
       </div>
+      <div class="labels d-flex flex-row py-4 p-3 flex-wrap"></div>
       <div class="row my-2 gy-3" id="recipes"></div>
     </div>
     <script type="module" src="src/index.js"></script>
